--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,20 @@
   <script>
     function get() {
       document.getElementById('note').innerHTML = 'loading...';
+      document.getElementById('button').style.visibility = 'hidden';
       document.getElementById('link-download').innerHTML = '';
       const code = document.getElementById("linkcode").value;
       fetch(window.location.href + 'get/' + code)
       .then(res => {
-        res.text().then(data => {
-          document.getElementById('note').innerHTML = '';
-          document.getElementById('link-download').innerHTML = 'Download';
-          document.getElementById('link-download').href = data;
-        })
+        if (res.status == 200) {
+          res.text().then(data => {
+            document.getElementById('note').innerHTML = '';
+            document.getElementById('link-download').innerHTML = 'Download';
+            document.getElementById('link-download').href = data;
+          })
+        } else if (res.status == 404) {
+          document.getElementById('note').innerHTML = 'Không tìm thấy file';
+        } else document.getElementById('note').innerHTML = 'Lỗi';
       })
       .catch(err => console.log(err));
     }
@@ -24,15 +29,16 @@
 <body>
   <div id="container">
     <h1>Get Link Fshare Vippromax</h1>
-    <p><i>by</i> <b>manhsuper171@gmail.com</b></p>
+    <h4><i>by</i> <b>manhsuper171@gmail.com</b></h4>
     <p><a href="" id="link-download" target="_blank"></a></p>
     <p id="note">Nhập code file cần tải.<br> 
       VD: https://www.fshare.vn/file/<b>LVCSNN3554RA</b>?token=1612146449<br>
-      Nhập <b>LVCSNN3554RA</b>. Giới hạn 2 lần get / 15 phút.
+      Nhập <b>LVCSNN3554RA</b>. 
     </p>
+    <p>Giới hạn 5Gb/1 file và 2 lần get/15 phút. Tải lại để get tiếp ok?</p>
     <div class="form">
       <input type="text" value="" id="linkcode"/>
-      <button onclick="get()">Get</button>
+      <button onclick="get()" id="button">Get</button>
     </div>
   </div>
 </body>
