--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-  <title>Get Link Fshare Vippromax</title>
+  <title>Get Link Fshare</title>
+  <meta name="description" content="get getlink leech fshare">
   <link rel="stylesheet" href="./stylesheets/style.css">
   <script>
     function get() {
       document.getElementById('note').innerHTML = 'loading...';
       document.getElementById('button').style.visibility = 'hidden';
-      document.getElementById('link-download').innerHTML = '';
       const code = document.getElementById("linkcode").value;
       fetch(window.location.href + 'get/' + code)
       .then(res => {
@@ -37,7 +37,7 @@
       VD: https://www.fshare.vn/file/<b>LVCSNN3554RA</b>?token=1612146449<br>
       Nhập <b>LVCSNN3554RA</b>. 
     </p>
-    <p>Giới hạn 5Gb/1 file và 2 lần get/15 phút. Tải lại để get tiếp ok?</p>
+    <p>Giới hạn 5Gb/1 file và 2 lần get/15 phút. Tải lại trang để get tiếp ok?</p>
     <div class="form">
       <input type="text" value="" id="linkcode"/>
       <button onclick="get()" id="button">Get</button>
