--- a/public/redirect.html
+++ b/public/redirect.html
@@ -3,22 +3,32 @@
     <title>Download</title>
     <style>
         body {
-            display: flex;
-            justify-content: center;
             padding: 30px;
         }
-        a {
+        p {
+            text-align: center;
+            font-size: x-large;
+        }
+        p a {
             font-size: xx-large;
         }
     </style>
 </head>
 <body>
-    <a href="" id="download">Download</a>
+    <div id="container">
+        <p>
+            <a href="" id="download">Download</a>
+        </p>
+        <p>
+            <i>Donate (MoMo) để duy trì trang web:</i><br><br>
+            <img src="momoqr.jpg" width="200" height="200">
+        </p>
+    </div>
     <script>
-        const params = new URLSearchParams(window.location.search);
-        const base64link = params.get('link');
-        const base64name = params.get('filename');
-        document.getElementById('download').href = '/download?filename=' + base64name + '&link=' + base64link;
+        const urlParams = new URLSearchParams(window.location.search);
+        const base64_url = urlParams.get('base64_url');
+        // const url = atob(base64_url);
+        document.getElementById('download').href = '/download?base64_url=' + base64_url;
     </script>
 </body>
 </html>
